@@ -1277,6 +1277,97 @@ std::string Ztring::To_Local () const
 }
 
 //---------------------------------------------------------------------------
+int128u Ztring::To_UUID () const
+{
+    if (size()!=36
+     || at( 0)< _T('0') || at( 0)> _T('9')
+     || at( 1)< _T('0') || at( 1)> _T('9')
+     || at( 2)< _T('0') || at( 2)> _T('9')
+     || at( 3)< _T('0') || at( 3)> _T('9')
+     || at( 4)< _T('0') || at( 4)> _T('9')
+     || at( 5)< _T('0') || at( 5)> _T('9')
+     || at( 6)< _T('0') || at( 6)> _T('9')
+     || at( 7)< _T('0') || at( 7)> _T('9')
+     || at( 8)!=_T('-')
+     || at( 9)< _T('0') || at( 9)> _T('9')
+     || at(10)< _T('0') || at(10)> _T('9')
+     || at(11)< _T('0') || at(11)> _T('9')
+     || at(12)< _T('0') || at(12)> _T('9')
+     || at(13)!=_T('-')
+     || at(14)< _T('0') || at(14)> _T('9')
+     || at(15)< _T('0') || at(15)> _T('9')
+     || at(16)< _T('0') || at(16)> _T('9')
+     || at(17)< _T('0') || at(17)> _T('9')
+     || at(18)!=_T('-')
+     || at(19)< _T('0') || at(19)> _T('9')
+     || at(20)< _T('0') || at(20)> _T('9')
+     || at(21)< _T('0') || at(21)> _T('9')
+     || at(22)< _T('0') || at(22)> _T('9')
+     || at(23)!=_T('-')
+     || at(24)< _T('0') || at(24)> _T('9')
+     || at(25)< _T('0') || at(25)> _T('9')
+     || at(26)< _T('0') || at(26)> _T('9')
+     || at(27)< _T('0') || at(27)> _T('9')
+     || at(28)< _T('0') || at(28)> _T('9')
+     || at(29)< _T('0') || at(29)> _T('9')
+     || at(30)< _T('0') || at(30)> _T('9')
+     || at(31)< _T('0') || at(31)> _T('9')
+     || at(32)< _T('0') || at(32)> _T('9')
+     || at(33)< _T('0') || at(33)> _T('9')
+     || at(34)< _T('0') || at(34)> _T('9')
+     || at(35)< _T('0') || at(35)> _T('9'))
+        return 0;
+    
+    int128u I;
+    I.hi=((int64u)((int8u)(at( 0)-'0'))<<60)
+       | ((int64u)((int8u)(at( 1)-'0'))<<56)
+       | ((int64u)((int8u)(at( 2)-'0'))<<52)
+       | ((int64u)((int8u)(at( 3)-'0'))<<48)
+       | ((int64u)((int8u)(at( 4)-'0'))<<44)
+       | ((int64u)((int8u)(at( 5)-'0'))<<40)
+       | ((int64u)((int8u)(at( 6)-'0'))<<36)
+       | ((int64u)((int8u)(at( 7)-'0'))<<32)
+       | ((int64u)((int8u)(at( 9)-'0'))<<28)
+       | ((int64u)((int8u)(at(10)-'0'))<<24)
+       | ((int64u)((int8u)(at(11)-'0'))<<20)
+       | ((int64u)((int8u)(at(12)-'0'))<<16)
+       | ((int64u)((int8u)(at(14)-'0'))<<12)
+       | ((int64u)((int8u)(at(15)-'0'))<< 8)
+       | ((int64u)((int8u)(at(16)-'0'))<< 4)
+       | ((int64u)((int8u)(at(17)-'0'))    );
+    I.lo=((int64u)((int8u)(at(19)-'0'))<<60)
+       | ((int64u)((int8u)(at(20)-'0'))<<56)
+       | ((int64u)((int8u)(at(21)-'0'))<<52)
+       | ((int64u)((int8u)(at(22)-'0'))<<48)
+       | ((int64u)((int8u)(at(24)-'0'))<<44)
+       | ((int64u)((int8u)(at(25)-'0'))<<40)
+       | ((int64u)((int8u)(at(26)-'0'))<<36)
+       | ((int64u)((int8u)(at(27)-'0'))<<32)
+       | ((int64u)((int8u)(at(28)-'0'))<<28)
+       | ((int64u)((int8u)(at(29)-'0'))<<24)
+       | ((int64u)((int8u)(at(30)-'0'))<<20)
+       | ((int64u)((int8u)(at(31)-'0'))<<16)
+       | ((int64u)((int8u)(at(32)-'0'))<<12)
+       | ((int64u)((int8u)(at(33)-'0'))<< 8)
+       | ((int64u)((int8u)(at(34)-'0'))<< 4)
+       | ((int64u)((int8u)(at(35)-'0'))    );
+
+    return I;
+}
+
+//---------------------------------------------------------------------------
+int32u Ztring::To_CC4 () const
+{
+    int32u I;
+    I =((int32u)((int8u)at(0))<<24)
+     | ((int32u)((int8u)at(1))<<16)
+     | ((int32u)((int8u)at(2))<< 8)
+     | ((int32u)((int8u)at(3))    );
+
+    return I;
+}
+
+//---------------------------------------------------------------------------
 //Operateur ToInt
 int8s Ztring::To_int8s (int8u Radix, ztring_t Options) const
 {
