@@ -1,6 +1,8 @@
 Version 0.4.6, 2009-
 -------------
 + File: ignoring hidden files
++ Ztring: To_CC4, To_UUID
+x ZtringListList: better CSV compatibility
 x File, Open: const input
 x intxToLittleEndian
 x Correcting some warnings
